package unipa.fooddelivery.models;

/**
 * Model POJO class  for RestaurantOwner
 */
public class RestaurantOwner extends User {

    public RestaurantOwner() {
        super();
    }

    public RestaurantOwner(String username, String password) {
        super(username, password);
    }
}