@startuml user
left to right direction
abstract class User <<Abstract Factory>> {
  -long id
  -String username
  -String password
  -String name
  -String surname
  -String email
  -String telephoneNumber
  -Address address
  -Date birthdate
  --
  +User {static} getFactory(String type)
  #User()
  #User(String username, String password)
  ..
  getters and setters
}

class Address {
    -String country
    -String city
    -String province
    -String street
    -String number
    -String zip
    --
    +Address()
    +Address(String country, String city,
\t       String province, String number, String zip)
   ..
   getters and setters
}

package "User subtypes" {

    class Customer {
        +Customer()
        +Customer(String username, String password)
    }

    class DeliveryMan {
        -boolean isAvailable
        +DeliveryMan()
        +DeliveryMan(String username, String password)
    }

    class RestaurantOwner {
        +RestaurantOwner()
        +RestaurantOwner(String username, String password)
    }

}

hide Customer fields
hide RestaurantOwner fields

Address *-- User
Customer <|-- User
DeliveryMan <|-- User
RestaurantOwner <|-- User

@enduml